gcc/testsuite/g++.dg/cpp0x/variadic87.C
@@ -1,0 +1,23 @@
+// PR c++/33965
+// { dg-options -std=c++0x }
+template<typename T>
+struct foo
+{
+    static bool const value = false;
+};
+
+template<template<typename...> class T, typename... Args>
+struct foo<T<Args...> >
+{
+    static bool const value = true;
+};
+
+template<int I>
+struct int_
+{};
+
+int main()
+{
+  static_assert(foo<int_<0> >::value == false, 
+		"picked up partial specialization, but should not have");
+}
